--- a/modd.conf
+++ b/modd.conf
@@ -1,4 +1,4 @@
 **/*.go {
-    prep: go build -o bin/automator.exe .
-    daemon +sigterm: bin/automator.exe
+    prep: go build -o bin/meeseeks.exe .
+    daemon +sigterm: bin/meeseeks.exe
 }
