added command line runner and added function to create go routines with selected conditions

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "commands": {
-    "concurrent": false,
+    "concurrent": true,
     "list": [
       {
         "directory": "C:\\Users\\Popstar\\work\\Orb\\WMOU\\wmusis-admin",
