--- a/config.json
+++ b/config.json
@@ -4,17 +4,17 @@
     "list": [
       {
         "directory": "C:\\Users\\Popstar\\work\\Orb\\WMOU\\wmusis-admin",
-        "concurrent": false,
-        "list": [{ "cmd": "npm run build -- --spa"}]
+        "concurrent": true,
+        "list": [{ "cmd": "npm run build -- --spa"}, {"cmd":"whoami"},{"cmd":"ipconfig"}]
       },
       {
-        "directory": "C:\\Users\\Popstar\\work\\Orb\\WMOU\\wmusis-portal",
-        "concurrent": false,
+        "directory": "C:\\Users\\Popstar\\work\\Orb\\WMOU\\wmusis-student",
+        "concurrent": true,
          "list": [{ "cmd": "npm run build -- --spa"}]
       },
       {
-        "directory": "C:\\Users\\Popstar\\work\\Orb\\WMOU\\wmusis-server",
-        "concurrent": false,
+        "directory": "C:\\Users\\Popstar\\work\\Orb\\WMOU\\wmusis-website",
+        "concurrent": true,
          "list": [{ "cmd": "npm run build"}]
       }
     ]
