--- a/config.json
+++ b/config.json
@@ -1,20 +1,20 @@
 {
   "commands": {
-    "concurrent": true,
+    "concurrent": false,
     "list": [
       {
         "directory": "C:\\Users\\Popstar\\work\\Orb\\WMOU\\wmusis-admin",
-        "concurrent": true,
+        "concurrent": false,
         "list": [{ "cmd": "npm run build -- --spa"}, {"cmd":"whoami"},{"cmd":"ipconfig"}]
       },
       {
         "directory": "C:\\Users\\Popstar\\work\\Orb\\WMOU\\wmusis-student",
-        "concurrent": true,
+        "concurrent": false,
          "list": [{ "cmd": "npm run build -- --spa"}]
       },
       {
         "directory": "C:\\Users\\Popstar\\work\\Orb\\WMOU\\wmusis-website",
-        "concurrent": true,
+        "concurrent": false,
          "list": [{ "cmd": "npm run build"}]
       }
     ]
