added feature to create config file and better error handling

--- a/modd.conf
+++ b/modd.conf
@@ -1,4 +1,4 @@
 **/*.go {
-    prep: go build -o bin/meeseeks.exe .
-    daemon +sigterm: bin/meeseeks.exe
+    prep: go build -o release/meeseeks.exe .
+    daemon +sigterm: release/meeseeks.exe
 }
