--- a/config.json
+++ b/config.json
@@ -1,21 +1,21 @@
 {
   "commands": {
-    "concurrent": false,
+    "concurrent": true,
     "list": [
       {
         "directory": "C:\\Users\\Popstar\\work\\Orb\\WMOU\\wmusis-admin",
         "concurrent": false,
-        "list": [{ "cmd": "npm run build -- --spa"}, {"cmd":"whoami"},{"cmd":"ipconfig"}]
+        "list": [{"cmd":"git pull"}, { "cmd": "npm run build -- --spa"},{"cmd":"ipconfig"}]
       },
       {
         "directory": "C:\\Users\\Popstar\\work\\Orb\\WMOU\\wmusis-student",
         "concurrent": false,
-         "list": [{ "cmd": "npm run build -- --spa"}]
+         "list": [{"cmd":"git pull"},{ "cmd": "npm run build -- --spa"}]
       },
       {
         "directory": "C:\\Users\\Popstar\\work\\Orb\\WMOU\\wmusis-website",
         "concurrent": false,
-         "list": [{ "cmd": "npm run build"}]
+         "list": [{"cmd":"git pull"},{ "cmd": "npm run build"}]
       }
     ]
   }
