--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ bin/
 *.config
 # Test binary, built with `go test -c`
 *.test
+.VSCodeCounter/
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
