--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,6 @@ bin/
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 releases/
-
+makefile
 # Dependency directories (remove the comment below to include it)
 # vendor/
